--- a/cluster.yml
+++ b/cluster.yml
@@ -3,7 +3,7 @@ kind: ClusterConfig
 
 metadata:
   name: airflow
-  region: us-east-1
+  region: eu-central-1
 
 managedNodeGroups:
   - name: workers
